Bug 1547821 - Sync 133 - Changed gap placement on popover orientation-right r=jlast
Differential Revision: https://phabricator.services.mozilla.com/D30301

UltraBlame original commit: 6fa32395081ddbb996352e61dd25cd12590146b6

--- a/devtools/client/debugger/src/components/shared/Popover.css
+++ b/devtools/client/debugger/src/components/shared/Popover.css
@@ -74,6 +74,62 @@ index
 }
 .
 popover
+{
+position
+:
+fixed
+;
+z
+-
+index
+:
+100
+;
+}
+.
+popover
+.
+orientation
+-
+right
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+row
+;
+}
+.
+popover
+.
+orientation
+-
+right
+.
+gap
+{
+padding
+-
+left
+:
+5px
+;
+}
+.
+popover
+:
+not
+(
+.
+orientation
+-
+right
+)
 .
 gap
 {
